Fixed main landing spacing and mobile navigations bar

--- a/home.css
+++ b/home.css
@@ -25,7 +25,7 @@ body {
 }
 
 .main-info h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 700;
 }
 
@@ -38,10 +38,11 @@ body {
     font-size: 1.2rem;
     color: #777777;
 }
-.landing-body {
-    margin-top: 10%;
-    margin-bottom: 10%;
+
+.main-landing {
+    margin-top: 18%;
 }
+
  #waveicon {
      width: 10%;
  }
